# rand-generator-plugin

./: Cargo.toml  README.md  example_rule.yaml
src/: lib.rs
